# TeleInfoSerialLinkAcquisition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Toolchain-rpi.cmake
src/: ApplicationModel.hpp  CMakeLists.txt  main.cpp
src/core/: SerialLinkReader.hpp
test/: TeleInfoSample.data
